--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,6 +11,16 @@
      IT Mill Toolkit examples
   </description>
 
+<servlet>
+    <servlet-name>ITMillToolkitApplicationRunner</servlet-name>
+    <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
+    <init-param>
+      <param-name>applicationRunner</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  </servlet>
+  
+  
  <servlet>
     <servlet-name>DemoTestBench</servlet-name>
     <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
@@ -341,6 +351,11 @@
       <param-value>com.itmill.toolkit.demo.WindowedDemos</param-value>
     </init-param>
   </servlet>
+  
+  	<servlet-mapping>
+    <servlet-name>ITMillToolkitApplicationRunner</servlet-name>
+    <url-pattern>/run/*</url-pattern>
+  </servlet-mapping>
   
   	<servlet-mapping>
     <servlet-name>DemoTestBench</servlet-name>
