fixes #2150, client side debug console now cannot be opened unless debug flag is set in app init
svn changeset:5804 branch:trunk

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,7 +9,13 @@
   <description>
      IT Mill Toolkit examples
   </description>
-
+    
+  <context-param>
+  	<param-name>Debug</param-name>
+  	<param-value>true</param-value>
+  	<description>IT Mill Toolkit debug mode</description>
+  </context-param>
+    
   <!-- Permit use of IT Mill Testing Tools for this servlet continer -->
   <context-param>
   	<param-name>testingToolsActive</param-name>
