enhancements to TestBench, now fires test cases with #TICKETNRO + has shorter mapping in dev env
svn changeset:6222 branch:trunk

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -464,6 +464,10 @@
     <servlet-name>TestBench</servlet-name>
     <url-pattern>/TestBench/*</url-pattern>
   </servlet-mapping>
+   <servlet-mapping>
+    <servlet-name>TestBench</servlet-name>
+    <url-pattern>/t/*</url-pattern>
+  </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>Reservr</servlet-name>
