Fix for #2438 - ApplicationServlet should allow extending Fix for #2890 - Split ApplicationRunner into own servlet
svn changeset:7618 branch:6.0

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -34,11 +34,7 @@
 
 	<servlet>
 		<servlet-name>ITMillToolkitApplicationRunner</servlet-name>
-		<servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
-		<init-param>
-			<param-name>applicationRunner</param-name>
-			<param-value>true</param-value>
-		</init-param>
+		<servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationRunnerServlet</servlet-class>
 	</servlet>
 
 
