--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,13 +11,13 @@
 
 
 <web-app>
-	<display-name>IT Mill Toolkit</display-name>
-	<description>IT Mill Toolkit examples</description>
+	<display-name>Vaadin</display-name>
+	<description>Vaadin examples</description>
 
 	<context-param>
 		<param-name>productionMode</param-name>
 		<param-value>false</param-value>
-		<description>IT Mill Toolkit production mode</description>
+		<description>Vaadin production mode</description>
 	</context-param>
 	<!-- Permit use of IT Mill Testing Tools for this servlet continer -->
 	<context-param>
@@ -33,7 +33,7 @@
 	</context-param>
 
 	<servlet>
-		<servlet-name>ITMillToolkitApplicationRunner</servlet-name>
+		<servlet-name>VaadinApplicationRunner</servlet-name>
 		<servlet-class>com.vaadin.terminal.gwt.server.ApplicationRunnerServlet</servlet-class>
 	</servlet>
 
@@ -344,7 +344,7 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>ITMillToolkitApplicationRunner</servlet-name>
+		<servlet-name>VaadinApplicationRunner</servlet-name>
 		<url-pattern>/run/*</url-pattern>
 	</servlet-mapping>
 
